-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 20
-
Component/s: hotspot
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8311722 | 17.0.9 | Fei Yang | P2 | Resolved | Fixed | b01 |
- backported by
-
JDK-8311722 RISC-V: RVC: Fix a potential alignment issue and add more alignment assertions for the patchable calls/nops
-
- Resolved
-
- links to
-
Commit
openjdk/jdk17u-dev/966fc82d
-
Commit
openjdk/jdk/a216960d
-
Commit(riscv-port)
openjdk/riscv-port-jdk11u/2bdf5d2f
-
Review
openjdk/jdk17u-dev/1427
-
Review
openjdk/jdk/10370
-
Review
openjdk/riscv-port-jdk17u/14
-
Review(riscv-port)
openjdk/riscv-port-jdk11u/22
-
Review(riscv-port)
openjdk/riscv-port-jdk11u/40